<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:id="@+id/imageView_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/profile_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[10]" />

    <TextView
        android:id="@+id/text_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:text="@string/full_name"
        android:theme="@style/ProfileInfoStyle"
        app:layout_constraintEnd_toEndOf="@+id/imageView_avatar"
        app:layout_constraintStart_toStartOf="@+id/imageView_avatar"
        app:layout_constraintTop_toBottomOf="@+id/imageView_avatar" />

    <TextView
        android:id="@+id/text_track_label"
        android:theme="@style/ProfileInfoStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_fullname"
        tools:text="@string/track_label" />

    <TextView
        android:id="@+id/text_track_title"
        android:theme="@style/ProfileInfoStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/text_track_label"
        app:layout_constraintTop_toTopOf="@+id/text_track_label"
        tools:text="@string/track_title" />

    <TextView
        android:id="@+id/text_country_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="@string/country_label"
        android:theme="@style/ProfileInfoStyle"
        app:layout_constraintStart_toStartOf="@+id/text_track_label"
        app:layout_constraintTop_toBottomOf="@+id/text_track_label" />

    <TextView
        android:id="@+id/text_country_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        tools:text="@string/country_name"
        android:theme="@style/ProfileInfoStyle"
        app:layout_constraintEnd_toEndOf="@+id/text_track_title"
        app:layout_constraintStart_toEndOf="@+id/text_country_label"
        app:layout_constraintTop_toTopOf="@+id/text_country_label" />

    <TextView
        android:id="@+id/text_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="@string/email_label"
        android:theme="@style/ProfileInfoStyle"
        app:layout_constraintStart_toStartOf="@+id/text_country_label"
        app:layout_constraintTop_toBottomOf="@+id/text_country_label" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        tools:text="@string/email"
        android:theme="@style/ProfileInfoStyle"
        app:layout_constraintEnd_toEndOf="@+id/text_country_title"
        app:layout_constraintStart_toEndOf="@+id/text_email_label"
        app:layout_constraintTop_toTopOf="@+id/text_email_label" />

    <TextView
        android:id="@+id/text_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="@string/phone_label"
        android:theme="@style/ProfileInfoStyle"
        app:layout_constraintStart_toStartOf="@+id/text_email_label"
        app:layout_constraintTop_toBottomOf="@+id/text_email_label" />

        <TextView
            android:id="@+id/text_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:theme="@style/ProfileInfoStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_email"
            app:layout_constraintStart_toEndOf="@+id/text_phone_label"
            app:layout_constraintTop_toTopOf="@+id/text_phone_label"
            tools:text="@string/phone_number" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>